syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

message DeleteIncomeRequest {
    int32 IncomeId = 1;
}